<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/contenedorPrincipal"
    tools:context="com.example.luiseps.colombia_turismo.MainActivity">



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/contenedorFragment">
        <LinearLayout
            style = "@style/linearLayoutStyle">
            <TextView
                style = "@style/textViewStyle.Title"
                android:text="@string/titulo"/>

            <TextView
                style = "@style/textViewStyle.Content"
                android:text="@string/intro"/>
            <ImageView
                style = "@style/imageViewStyle"
                android:src="@drawable/valledupar"/>
            <TextView
                style = "@style/textViewStyle.Content"
                android:text="@string/intro2"/>
        </LinearLayout>
    </FrameLayout>

    <ListView
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:foregroundGravity="left"
        android:layout_gravity="start"
        android:id="@+id/menuIzq"
        android:choiceMode="singleChoice"
        android:background="@color/midnightblue">

    </ListView>


</android.support.v4.widget.DrawerLayout>
